<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_back_color"
    tools:context=".activity.RegisterActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/relTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_200sp"
                    android:scaleType="fitXY"
                    android:layout_marginLeft="-15dp"
                    android:layout_marginTop="-10dp"
                    android:layout_marginRight="-15dp"
                    android:src="@drawable/ic_shape_1">

                </ImageView>

                <ImageView
                    android:layout_width="@dimen/_200sp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_22sp"
                    android:src="@drawable/ic_crm_logo"
                    android:tint="@color/white">

                </ImageView>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/relTop"
                android:orientation="vertical"
                android:paddingLeft="@dimen/_45sp"
                android:paddingRight="@dimen/_45sp"
                android:layout_marginTop="@dimen/_30sp"
                android:paddingBottom="@dimen/_20sp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textColor="@color/black"
                    android:fontFamily="@font/raleway_regular"
                    android:textSize="@dimen/title_size_18">

                </TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edtFullName"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sp"
                        android:background="@drawable/edt_background"
                        android:hint="@string/full_name"
                        android:paddingLeft="@dimen/_10sp"
                        android:textColor="@color/dark_black"
                        android:singleLine="true"
                        android:paddingRight="@dimen/_10sp"
                        android:textCursorDrawable="@drawable/cursor_color"
                        android:fontFamily="@font/raleway_regular"
                        android:textSize="@dimen/_12sp">

                    </EditText>

                    <EditText
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sp"
                        android:background="@drawable/edt_background"
                        android:hint="@string/email"
                        android:paddingLeft="@dimen/_10sp"
                        android:textColor="@color/dark_black"
                        android:layout_marginTop="@dimen/_15sp"
                        android:textCursorDrawable="@drawable/cursor_color"
                        android:fontFamily="@font/raleway_regular"
                        android:singleLine="true"
                        android:paddingRight="@dimen/_10sp"
                        android:textSize="@dimen/_12sp">

                    </EditText>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sp"
                        android:layout_marginTop="@dimen/_15sp">

                        <EditText
                            android:id="@+id/edtPass"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sp"
                            android:background="@drawable/edt_background"
                            android:hint="@string/password"
                            android:paddingLeft="@dimen/_10sp"
                            android:textCursorDrawable="@drawable/cursor_color"
                            android:paddingRight="@dimen/_10sp"
                            android:textColor="@color/dark_black"
                            android:drawableTint="@color/dark_black"
                            android:fontFamily="@font/raleway_regular"
                            android:inputType="textPassword"
                            android:singleLine="true"
                            android:textSize="@dimen/_12sp">

                        </EditText>

                        <ImageView
                            android:id="@+id/imgShowPass"
                            android:layout_width="@dimen/_20sp"
                            android:layout_height="@dimen/_20sp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="@dimen/_10sp"
                            android:visibility="gone"
                            android:src="@drawable/ic_password_eye">

                        </ImageView>

                        <ImageView
                            android:id="@+id/imgHidePass"
                            android:layout_width="@dimen/_20sp"
                            android:layout_height="@dimen/_20sp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="@dimen/_10sp"
                            android:visibility="visible"
                            android:src="@drawable/ic_hide_password_eye">

                        </ImageView>

                    </RelativeLayout>

                    <Button
                        android:id="@+id/btnSignUp"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sp"
                        android:layout_marginTop="@dimen/_30sp"
                        android:background="@drawable/edt_background"
                        app:backgroundTint="@color/black"
                        android:textSize="@dimen/_15sp"
                        android:fontFamily="@font/raleway_semi_bold"
                        android:foreground="@drawable/selectable_item_background"
                        android:text="@string/sign_up">

                    </Button>


                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    android:layout_marginTop="@dimen/_25sp"
                    android:layout_gravity="center"
                    android:textSize="@dimen/_15sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/raleway_regular"
                    android:gravity="center">

                </TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_25sp"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardGoogle"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        app:cardBackgroundColor="@color/white"
                        android:foreground="?attr/selectableItemBackground"
                        android:layout_marginRight="@dimen/_10sp">

                        <ImageView
                            android:layout_width="@dimen/_20sp"
                            android:layout_height="@dimen/_20sp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_google"
                            android:tint="@color/red">

                        </ImageView>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardMessage"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        app:cardBackgroundColor="@color/white"
                        android:foreground="?attr/selectableItemBackground"
                        android:layout_marginLeft="@dimen/_10sp">

                        <ImageView
                            android:layout_width="@dimen/_20sp"
                            android:layout_height="@dimen/_20sp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_message">

                        </ImageView>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/_20sp"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:textSize="@dimen/_15sp"
                    android:fontFamily="@font/raleway_light"
                    android:textColor="@color/dark_black">

                </TextView>

                <TextView
                    android:id="@+id/txtSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:textSize="@dimen/_15sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/raleway_extra_bold"
                    android:layout_marginLeft="@dimen/_10sp"
                    android:textStyle="bold">

                </TextView>

            </LinearLayout>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>